tests/error/double-pipe.lua
ans = aBoolValue and 'yes' || 'no'